# notes-pantry

./: manage.py  package-lock.json  pyproject.toml
base/: admin.py  models.py  serializers.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_initial.py  0003_alter_note_folder.py  0004_folder_parent_folder.py
pantry/: asgi.py  settings.py  urls.py  wsgi.py
reactapp/: package-lock.json  package.json
reactapp/src/: index.js  output.css
reactapp/src/components/app/: App.js
reactapp/src/components/base/: BaseC.js  ButtonC.js  basec.css
reactapp/src/components/folder/: CreateFolder.js  FolderDetail.js  FolderList.js
reactapp/src/components/folder/FolderContext/: FolderContext.js
reactapp/src/components/folder/FolderCreate/: FolderCreate.js  FolderCreate.module.css
reactapp/src/components/folder/FolderDelete/: FolderDelete.js
reactapp/src/components/folder/FolderDetail/: FolderDetail.js
reactapp/src/components/folder/FolderList/: FolderList.js  FolderList.module.css
reactapp/src/components/folder/FolderUpdate/: FolderUpdate.js
reactapp/src/components/note/: CreateNote.js  NoteDetail.js  NoteList.js
reactapp/src/components/note/NoteCreate/: NoteCreate.js  NoteCreate.module.css
reactapp/src/components/user/: UserProvider.js
users/: urls.py  views.py
users/migrations/: 0001_initial.py
